@@ -1,5 +1,9 @@
 2008-08-31  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Copyright year updates.
+	* lib/am/header-vars.am: Update copyright years.
+	* lib/am/tags.am: Likewise.
+
 	* THANKS: Use Cyrillic name instead of ASCII transcription.
 
 	Fix rebuilding of removed subdir/Makefile.in files.
